--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"prepush": "npm run lint && npm test"
 	},
 	"devDependencies": {
+		"@types/bignum": "0.0.29",
+		"@types/node": "10.11.4",
 		"husky": "0.14.3",
 		"lerna": "3.4.1",
 		"lint-staged": "7.3.0",
